fetched every actor

--- a/Actors page.html
+++ b/Actors page.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>ACTORS</title>
 </head>
+
 <body class="bg-black">
     <div class="slider ">
         <section class="navigation">
@@ -16,120 +17,122 @@
 
                 <div class="ml-14"><i class="fa-solid fa-magnifying-glass text-white text-3xl pr-5 "></i></div>
                 <div class='ml-auto mr-20 '>
-                    <a class="mr-16 text-white text-2xl font-semibold hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='#'>HOME</a>
-                    <a class="text-white mr-16 text-2xl font-semibold hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='#'>ABOUT</a>
+                    <a class="mr-16 text-white text-2xl font-semibold hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='index.html'>HOME</a>
+                    <a class="text-white mr-16 text-2xl font-semibold hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='about.html'>ABOUT</a>
                 </div>
                 <div class='middle mr-20'>
                     <img class="w-80 h-36 " src="./images/logo.png">
                 </div>
                 <div class='mr-auto ml-10 justify-between '>
                     <a class="mr-16 text-white text-2xl font-semibold  hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='#'>MOVIES</a>
-                    <a class="mr-16 text-white text-2xl font-semibold  hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='#'>ACTORS</a>
+                    <a class="mr-16 text-white text-2xl font-semibold  hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='Actors page.html'>ACTORS</a>
 
                 </div>
             </nav>
+    </div>
+
+    <div class="containerr">
+        <div class="grid grid-cols-3 gap-10  ml-10 mr-10  mt-56" id="nowPlaying">
+            <!-- <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
+            <div class="overlay h-full">
+                <div class="actorheader-text text-4xl"></div>
+                <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
+                <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+            </div>
         </div>
 
-
-    <div class="grid grid-cols-3 gap-10  ml-10 mr-10  mt-56">
-      <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
-        <div class="overlay h-full">
-          <div class="actorheader-text text-4xl"></div>
-      <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
-      <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+        <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
+            <div class="overlay h-full">
+                <div class="actorheader-text text-4xl"></div>
+                <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
+                <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+            </div>
         </div>
-      </div>
 
-      <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
-        <div class="overlay h-full">
-          <div class="actorheader-text text-4xl"></div>
-      <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
-      <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+        <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
+            <div class="overlay h-full">
+                <div class="actorheader-text text-4xl"></div>
+                <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
+                <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+            </div>
         </div>
-      </div>
 
-      <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
-        <div class="overlay h-full">
-          <div class="actorheader-text text-4xl"></div>
-      <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
-      <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+        <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
+            <div class="overlay h-full">
+                <div class="actorheader-text text-4xl"></div>
+                <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
+                <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+            </div>
         </div>
-      </div>
 
-      <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
-        <div class="overlay h-full">
-          <div class="actorheader-text text-4xl"></div>
-      <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
-      <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+        <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
+            <div class="overlay h-full">
+                <div class="actorheader-text text-4xl"></div>
+                <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
+                <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+            </div>
         </div>
-      </div>
 
-      <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
-        <div class="overlay h-full">
-          <div class="actorheader-text text-4xl"></div>
-      <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
-      <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+        <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
+            <div class="overlay h-full">
+                <div class="actorheader-text text-4xl"></div>
+                <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
+                <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+            </div>
         </div>
-      </div>
 
-      <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
-        <div class="overlay h-full">
-          <div class="actorheader-text text-4xl"></div>
-      <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
-      <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+        <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
+            <div class="overlay h-full">
+                <div class="actorheader-text text-4xl"></div>
+                <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
+                <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+            </div>
         </div>
-      </div>
 
-      <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
-        <div class="overlay h-full">
-          <div class="actorheader-text text-4xl"></div>
-      <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
-      <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+        <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
+            <div class="overlay h-full">
+                <div class="actorheader-text text-4xl"></div>
+                <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
+                <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+            </div>
         </div>
-      </div>
 
-      <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
-        <div class="overlay h-full">
-          <div class="actorheader-text text-4xl"></div>
-      <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
-      <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+        <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
+            <div class="overlay h-full">
+                <div class="actorheader-text text-4xl"></div>
+                <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
+                <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+            </div>
         </div>
-      </div>
 
-      <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
-        <div class="overlay h-full">
-          <div class="actorheader-text text-4xl"></div>
-      <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
-      <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+        <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
+            <div class="overlay h-full">
+                <div class="actorheader-text text-4xl"></div>
+                <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
+                <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+            </div>
         </div>
-      </div>
 
-      <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
-        <div class="overlay h-full">
-          <div class="actorheader-text text-4xl"></div>
-      <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
-      <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+        <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
+            <div class="overlay h-full">
+                <div class="actorheader-text text-4xl"></div>
+                <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
+                <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+            </div>
         </div>
-      </div>
 
-      <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
-        <div class="overlay h-full">
-          <div class="actorheader-text text-4xl"></div>
-      <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
-      <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+        <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
+            <div class="overlay h-full">
+                <div class="actorheader-text text-4xl"></div>
+                <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
+                <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
+            </div> -->
         </div>
-      </div>
-
-      <div class="animation box-content h-60 w-48 p-12 border-0 bg-gray-700 mx-9 my-1 bg-no-repeat bg-cover bg-center">
-        <div class="overlay h-full">
-          <div class="actorheader-text text-4xl"></div>
-      <p class="actormovie-style text-lg text-white mt-48 ml-5  "></p>
-      <p class="actormovie-style text-lg text-white mt-3 ml-5  "></p>
-        </div>
-      </div>
 
     </div>
 
+    <script src="actors.js"></script>
 
+</body>
 
-        </body>
+</html>
