completed about page

--- a/Actors page.html
+++ b/Actors page.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="Actors page.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>ACTORS</title>
@@ -131,6 +133,38 @@
 
     </div>
 
+    <div class=" w-full h-48 "></div>
+      <div class="footer-container  w-full h-auto">
+          <div class="footer-triangles">
+              <div class="footer_triangle_1"></div>
+              <div class="footer_triangle_2"></div>
+          </div>
+          <div class="flex">
+              <div class="socials">
+                  <a href="#index.html"><img class="dark_logo" src="images/darker logo.png"></a>
+                  <div class="flex justify-around mt-20">
+                      <a href="#"><i class="fa-brands fa-square-instagram"></i> </a>
+                      <a href="#"> <i class="fa-brands fa-square-facebook"></i> </a>
+                      <a href="#"><i class="fa-brands fa-linkedin"></i> </a>
+                  </div>
+
+              </div>
+              <div class="footer flex space-x-32 mx-60 mt-40 justify-center  text-grey">
+                  <div class="footer_1  ">
+                      <h3 class="footerfont-style font-bold text-4xl"><a href="#">Movies</a></h3>
+                  </div>
+                  <div class="footer_2 ">
+                      <h3 class="footerfont-style font-bold text-4xl"><a href="#">About</a></h3>
+
+                  </div>
+                  <div class="footer_3  text-center">
+                      <h3 class="footerfont-style font-bold text-4xl"><a href="#">Actors</a></h3>
+
+                  </div>
+              </div>
+          </div>
+
+      </div>
     <script src="actors.js"></script>
 
 </body>
