--- a/Actors page.html
+++ b/Actors page.html
@@ -26,7 +26,7 @@
                     <img class="w-80 h-36 " src="./images/logo.png">
                 </div>
                 <div class='mr-auto ml-10 justify-between '>
-                    <a class="mr-16 text-white text-2xl font-semibold  hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='#'>MOVIES</a>
+                    <a class="mr-16 text-white text-2xl font-semibold  hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='moviepage.html'>MOVIES</a>
                     <a class="mr-16 text-white text-2xl font-semibold  hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='Actors page.html'>ACTORS</a>
 
                 </div>
@@ -134,37 +134,37 @@
     </div>
 
     <div class=" w-full h-48 "></div>
-      <div class="footer-container  w-full h-auto">
-          <div class="footer-triangles">
-              <div class="footer_triangle_1"></div>
-              <div class="footer_triangle_2"></div>
-          </div>
-          <div class="flex">
-              <div class="socials">
-                  <a href="#index.html"><img class="dark_logo" src="images/darker logo.png"></a>
-                  <div class="flex justify-around mt-20">
-                      <a href="#"><i class="fa-brands fa-square-instagram"></i> </a>
-                      <a href="#"> <i class="fa-brands fa-square-facebook"></i> </a>
-                      <a href="#"><i class="fa-brands fa-linkedin"></i> </a>
-                  </div>
+    <div class="footer-container  w-full h-auto">
+        <div class="footer-triangles">
+            <div class="footer_triangle_1"></div>
+            <div class="footer_triangle_2"></div>
+        </div>
+        <div class="flex">
+            <div class="socials">
+                <a href="#index.html"><img class="dark_logo" src="images/darker logo.png"></a>
+                <div class="flex justify-around mt-20">
+                    <a href="#"><i class="fa-brands fa-square-instagram"></i> </a>
+                    <a href="#"> <i class="fa-brands fa-square-facebook"></i> </a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i> </a>
+                </div>
 
-              </div>
-              <div class="footer flex space-x-32 mx-60 mt-40 justify-center  text-grey">
-                  <div class="footer_1  ">
-                      <h3 class="footerfont-style font-bold text-4xl"><a href="#">Movies</a></h3>
-                  </div>
-                  <div class="footer_2 ">
-                      <h3 class="footerfont-style font-bold text-4xl"><a href="#">About</a></h3>
+            </div>
+            <div class="footer flex space-x-32 mx-60 mt-40 justify-center  text-grey">
+                <div class="footer_1  ">
+                    <h3 class="footerfont-style font-bold text-4xl"><a href="#">Movies</a></h3>
+                </div>
+                <div class="footer_2 ">
+                    <h3 class="footerfont-style font-bold text-4xl"><a href="#">About</a></h3>
 
-                  </div>
-                  <div class="footer_3  text-center">
-                      <h3 class="footerfont-style font-bold text-4xl"><a href="#">Actors</a></h3>
+                </div>
+                <div class="footer_3  text-center">
+                    <h3 class="footerfont-style font-bold text-4xl"><a href="#">Actors</a></h3>
 
-                  </div>
-              </div>
-          </div>
+                </div>
+            </div>
+        </div>
 
-      </div>
+    </div>
     <script src="actors.js"></script>
 
 </body>
