--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <img class="w-80 h-36 " src="./images/logo.png">
                 </div>
                 <div class='mr-auto ml-10 justify-between '>
-                    <a class="mr-16 text-white text-2xl font-semibold  hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='#'>MOVIES</a>
+                    <a class="mr-16 text-white text-2xl font-semibold  hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='moviepage.html'>MOVIES</a>
                     <a class="mr-16 text-white text-2xl font-semibold  hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='Actors page.html'>ACTORS</a>
 
                 </div>
