--- a/about.html
+++ b/about.html
@@ -22,53 +22,53 @@
 
 
 <body class="bg-black">
-  <section class="navigation">
-      <nav class='site-nav pt-1 inset-x-0 top-0 absolute z-30'>
+    <section class="navigation">
+        <nav class='site-nav pt-1 inset-x-0 top-0 absolute z-30'>
 
-          <div class="ml-14"><i class="fa-solid fa-magnifying-glass text-white text-3xl pr-5 "></i></div>
-          <div class='ml-auto mr-20 '>
-              <a class="mr-16 text-white text-2xl font-semibold hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='#'>HOME</a>
-              <a class="text-white mr-16 text-2xl font-semibold hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='about.html'>ABOUT</a>
-          </div>
-          <div class='middle mr-20'>
-              <img class="w-80 h-36 " src="./images/logo.png">
-          </div>
-          <div class='mr-auto ml-10 justify-between '>
-              <a class="mr-16 text-white text-2xl font-semibold  hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='#'>MOVIES</a>
-              <a class="mr-16 text-white text-2xl font-semibold  hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='Actors page.html'>ACTORS</a>
+            <div class="ml-14"><i class="fa-solid fa-magnifying-glass text-white text-3xl pr-5 "></i></div>
+            <div class='ml-auto mr-20 '>
+                <a class="mr-16 text-white text-2xl font-semibold hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='index.html'>HOME</a>
+                <a class="text-white mr-16 text-2xl font-semibold hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='about.html'>ABOUT</a>
+            </div>
+            <div class='middle mr-20'>
+                <img class="w-80 h-36 " src="./images/logo.png">
+            </div>
+            <div class='mr-auto ml-10 justify-between '>
+                <a class="mr-16 text-white text-2xl font-semibold  hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='moviepage.html'>MOVIES</a>
+                <a class="mr-16 text-white text-2xl font-semibold  hover:text-red-800" style="font-family: 'Poppins', sans-serif;" href='Actors page.html'>ACTORS</a>
 
-          </div>
-      </nav>
-  </section>
+            </div>
+        </nav>
+    </section>
 
-  <div class="w-full h-auto ">
-    <div class="slider__contents bg-cover  " style="background-image:url('images/1.png')">
+    <div class="w-full h-auto ">
+        <div class="slider__contents bg-cover  " style="background-image:url('images/1.png')">
 
+        </div>
+
+        <div class="slider__inner ">
+
+            <div class="slider__contents bg-cover  " style="background-image:url('images/aboutmain.png')">
+
+            </div>
+
+            <div class="slider__contents bg-cover" style="background-image:url('images/2.png')">
+
+            </div>
+            <div class="slider__contents bg-cover  " style="background-image:url('images/3.png')">
+
+            </div>
+            <div class="slider__contents bg-cover  " style="background-image:url('images/4.png')">
+
+            </div>
+        </div>
+
+        <div class="">
+            <img class="mr-auto bg-cover " style="width:670px;height:236px ;margin-top:381px;transform: rotate(-0.1deg);" src="images/traingle5.png">
+            <img class="mr-auto bg-cover  " style="width:670px;height:236px ;margin-top:-236px;transform: rotate(-0.1deg);" src="images/traingle2.png">
+
+        </div>
     </div>
-
-    <div class="slider__inner ">
-
-        <div class="slider__contents bg-cover  " style="background-image:url('images/aboutmain.png')">
-
-        </div>
-
-        <div class="slider__contents bg-cover" style="background-image:url('images/2.png')">
-
-        </div>
-        <div class="slider__contents bg-cover  " style="background-image:url('images/3.png')">
-
-        </div>
-        <div class="slider__contents bg-cover  " style="background-image:url('images/4.png')">
-
-        </div>
-    </div>
-
-    <div class="">
-        <img class="mr-auto bg-cover " style="width:670px;height:236px ;margin-top:381px;transform: rotate(-0.1deg);" src="images/traingle5.png">
-        <img class="mr-auto bg-cover  " style="width:670px;height:236px ;margin-top:-236px;transform: rotate(-0.1deg);" src="images/traingle2.png">
-
-    </div>
-</div>
 
     <div class="aboutdescreption-bage ">
         <p class="moviesparaghrap  mt-3  text-center text-5xl text-white ">WHO WE ARE?</p>
@@ -159,7 +159,7 @@
 
         </div>
     </div>
-  <div class=" w-full h-48 "></div>
+    <div class=" w-full h-48 "></div>
     <div class="footer-container  w-full h-auto">
         <div class="footer-triangles">
             <div class="footer_triangle_1"></div>
